@@ -7,7 +7,8 @@ class ApplicationController < ActionController::Base
   
   before_filter :set_start_time, :set_time_zone, :set_view_items, :current_ability
   before_filter :log_additional_data, :set_per_page
-  before_filter :site_links, :last_modified
+  # before_filter :site_links # Caching on sidebar
+  before_filter :last_modified
   
   
   comment_destroy_conditions do |comment|
@@ -24,7 +25,7 @@ class ApplicationController < ActionController::Base
   end
 
   def site_links
-    @all_categories ||= Category.order("title ASC")
+    @all_categories ||= Category.order("priority ASC")
     @all_pages ||= Page.order("priority ASC")
   end
   
