@@ -114,29 +114,30 @@
     <% end %>
 
 
-    <div class="sidebar_secions">
-      <ul class="nav nav-list">
-        <li class="horizontal-divider"></li>
-        <% @all_categories.each do |category| %>
-          <li class=<%= li_class(category.to_param, :id, "active") %>>
-            <%= link_to category.title, category, title:  category.description %>
-          </li>
-        <% end %>
-        <li class="horizontal-divider"></li>
-      </ul>
-      <ul class="nav nav-list">
-        <% @all_pages.each do |page| %>
-          <li class=<%= li_class(page.to_param, :id, "active") %>>
-            <%= link_to page.title, page, title:  page.title %>
-          </li>
-        <% end %>
-        <li class="horizontal-divider"></li>
-      </ul>
-    </div>
+    <% cache_expiring("sidebar", 600) do %>
 
-    <% cache_expiring("sidebar_popular", 600) do %>
       <div class="sidebar_secions">
-        <h3>Most Popular</h3>
+        <ul class="nav nav-list">
+          <li class="horizontal-divider"></li>
+          <% Category.order("priority ASC").each do |category| %>
+            <li class=<%= li_class(category.to_param, :id, "active") %>>
+              <%= link_to category.title, category, title:  category.description %>
+            </li>
+          <% end %>
+          <li class="horizontal-divider"></li>
+        </ul>
+        <ul class="nav nav-list">
+          <% Page.order("priority ASC").each do |page| %>
+            <li class=<%= li_class(page.to_param, :id, "active") %>>
+              <%= link_to page.title, page, title:  page.title %>
+            </li>
+          <% end %>
+          <li class="horizontal-divider"></li>
+        </ul>
+      </div>
+
+      <div class="sidebar_secions">
+        <h4>Most Read</h4>
         <% Item.popular(5).each do |item| %>
           <div class="sidebar-item">
             <%= item_mini(item).html_safe %>
@@ -144,24 +145,30 @@
           </div>
         <% end %>
       </div>
-    <% end %>
 
-    <% cache_expiring("sidebar_comments", 300) do %>
       <div class="sidebar_secions">
-        <h3>Recent Comments</h3>
-        <% Comment.recent(7).each do |comment| %>
-          <div class="sidebar-comment">
-            <span class="comment-body">
-              <%= link_to comment.body.truncate(60), item_path(comment.commentable), title: comment.body, id: 'tooltip' %>
-            </span>
+        <h4>Most Commented</h4>
+        <% Item.most_commented(5).each do |item| %>
+          <div class="sidebar-item">
+            <%= item_mini(item).html_safe %>
             <span class="comment-date">
-              <%= time_ago_in_words(comment.created_at) %> ago 
-              by <%= link_to comment.name, author_path(comment.owner.id) %>
+              <%= item.comments_count %> comments
             </span>
             <span class="horizontal-divider"></span>
           </div>
         <% end %>
       </div>
+
+      <div class="sidebar_secions">
+        <h4>Top Authors</h4>
+        <% User.popular(4).each do |user| %>
+          <div class="sidebar-item">
+            <%= mini_user(user).html_safe %>
+            <span class="horizontal-divider"></span>
+          </div>
+        <% end %>
+      </div>
+  
     <% end %>
 
     <%= image_tag "adfreesite.png",
