@@ -11,7 +11,7 @@
 #
 # It's strongly recommended to check this file into your version control system.
 
-ActiveRecord::Schema.define(:version => 20120524010344) do
+ActiveRecord::Schema.define(:version => 20120526054436) do
 
   create_table "active_admin_comments", :force => true do |t|
     t.integer  "resource_id",   :null => false
@@ -147,6 +147,7 @@ ActiveRecord::Schema.define(:version => 20120524010344) do
     t.boolean  "youtube_vid"
     t.boolean  "youtube_img"
     t.boolean  "sticky",            :default => false
+    t.integer  "comments_count",    :default => 0
   end
 
   add_index "items", ["allow_comments"], :name => "index_items_on_allow_comments"
